<resources>
    <string name="app_name">InventoryManager</string>
    <string name="button_create_item">Create</string>
    <string name="button_manage_stock">Manage Inventory</string>
    <string name="button_new_item">New Item</string>
    <string name="button_manage">Manage</string>
    <string name="text_item_name">Item Name</string>
    <string name="text_stock_label">Stock: </string>
    <string name="delete_button">Delete Item</string>
    <string name="desc_label">Description</string>
    <string name="add_remove_label">Add/Remove Stock</string>
    <string name="amount_hint">Amount</string>
    <string name="add_button">Add</string>
    <string name="subtract_button">Remove</string>
</resources>